force-app/main/default/objects/Store__c/Store__c.object-meta.xml
<CustomObject>
    <description>Represents a Wired Brain Coffee Retail Store</description>
    <label>Store</label>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>