force-app/main/default/objects/Store__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City the store is located in</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>