force-app/main/default/objects/Store__c/fields/Customer_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Score__c</fullName>
    <label>Customer Satisfaction Score</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>