force-app/main/default/objects/Store__c/fields/Latest_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Latest_Health_Score__c</fullName>
    <label>Latest Health Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>