force-app/main/default/objects/Store__c/fields/Next_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Delivery_Date__c</fullName>
    <label>Next Delivery Date</label>
    <summarizedField>Store_Supply_Order__c.Delivery_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Store_Supply_Order__c.Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Store_Supply_Order__c.Store__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>