force-app/main/default/objects/Store__c/fields/Orders_Most_Advanced_Date__c.field-meta.xml
<CustomField>
    <fullName>Orders_Most_Advanced_Date__c</fullName>
    <label>Orders Most Advanced Date</label>
    <summarizedField>Store_Supply_Order__c.Date_of_Delivery__c</summarizedField>
    <summaryFilterItems>
        <field>Store_Supply_Order__c.Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Store_Supply_Order__c.Store__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>