force-app/main/default/objects/Store__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>The street where the store is located</description>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>