force-app/main/default/objects/Store__c/fields/Total_Supply_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Supply_Spend__c</fullName>
    <description>The sum of order amounts of all Store Supply Orders under this store</description>
    <label>Total Supply Spend</label>
    <summarizedField>Store_Supply_Order__c.Order_Amount__c</summarizedField>
    <summaryForeignKey>Store_Supply_Order__c.Store__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>