force-app/main/default/objects/Store__c/fields/Types_of_Coffee__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Coffee__c</fullName>
    <description>Types of coffee served at this store</description>
    <label>Types of Coffee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arabica</fullName>
            </value>
            <value>
                <fullName>Robusta</fullName>
            </value>
            <value>
                <fullName>Liberica</fullName>
            </value>
            <value>
                <fullName>Excelsa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>