force-app/main/default/objects/Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Latest_Health_Score__c</columns>
    <columns>Customer_Satisfaction_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>